2011-08-16 Nikolay Nemshilov

  * Rename `colorifer` -> `colorifier`

2011-08-11 Nikolay Nemshilov

  * Version 1.0.0 release