@@ -32,7 +32,7 @@ function boo_hoo(tro, lo, lo) {
 }
 </pre>
 
-    <h2>CSS</h2>
+    <h2>CSS/SASS/SCSS</h2>
 <pre data-lang="css">
 /* some comment */
 div#boo-hoo .to[lo="lo"] span {
@@ -44,12 +44,13 @@ div#boo-hoo .to[lo="lo"] span {
 }
 </pre>
 
-    <h2>HTML</h2>
+    <h2>HTML/XML</h2>
 <pre data-lang="html">
 &lt;div id="boo-hoo" class="trololo">
   Some text
   &lt;!-- &lt;b>some comment&lt;/b> -->
 &lt;/div>
+&lt;script src="boo/hoo.js">&lt;/script>
 &lt;script type="text/javascript">
   var some = "string";
 &lt;/script>
